--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,7 @@ h1 {
 .chessboard-container {
   display: flex;
   justify-content: center;
+  align-items: center;
   margin-top: 20px;
   width: 650px;
   height: 500px;
